[gd_scene load_steps=13 format=3 uid="uid://cuc6k2q36vwws"]

[ext_resource type="Texture2D" uid="uid://cup6t21j4hwq8" path="res://Assets/textures/bird.png" id="1_2mmgp"]
[ext_resource type="Script" path="res://scripts/Character.gd" id="1_3hp2b"]
[ext_resource type="AudioStream" uid="uid://cagx5e13m3vwk" path="res://Assets/sound/wing.wav" id="3_gvl6k"]
[ext_resource type="AudioStream" uid="uid://cadpanec6lxdu" path="res://Assets/sound/die.wav" id="4_6sol0"]
[ext_resource type="AudioStream" uid="uid://0yy6gam2o2wp" path="res://Assets/sound/hit.wav" id="5_hnhd5"]
[ext_resource type="AudioStream" uid="uid://t6btndpi3p8o" path="res://Assets/sound/point.wav" id="6_q23bq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ja2vd"]
radius = 14.0

[sub_resource type="Animation" id="Animation_lxrt8"]
resource_name = "Flap"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bird:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_cnkem"]
resource_name = "Idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bird:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 10), Vector2(0, -10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 10), Vector2(0, -10)]
}

[sub_resource type="Animation" id="Animation_kt63p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Bird:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Bird:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pq5tp"]
_data = {
"Flap": SubResource("Animation_lxrt8"),
"Idle": SubResource("Animation_cnkem"),
"RESET": SubResource("Animation_kt63p")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_k6arj"]

[node name="Character" type="RigidBody2D"]
mass = 0.01
gravity_scale = 0.0
can_sleep = false
script = ExtResource("1_3hp2b")

[node name="Bird" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_2mmgp")
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.5, 1.5)
shape = SubResource("CircleShape2D_ja2vd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_pq5tp")
}

[node name="FlapAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_gvl6k")

[node name="DieAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_6sol0")

[node name="HitAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_hnhd5")

[node name="Score" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_q23bq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_k6arj")
